@@ -138,5 +138,6 @@ TestRefundReceipt=1
 TestRefundReceipt2=1
 TestFiscalReceipt9=1
 TestPowerState=1
+TestDayOpened=1
 [Tests.OposDaisyTest.exe.TSalesReceiptTest]
 TestReceipt=1
