@@ -1,6 +1,6 @@
 VS_VERSION_INFO VERSIONINFO
-FILEVERSION 1,13,0,6
-PRODUCTVERSION 1,13,0,6 
+FILEVERSION 1,13,0,7
+PRODUCTVERSION 1,13,0,7 
 FILEFLAGSMASK 0x3fL
 FILEFLAGS 0x0L
 FILEOS 0x4L
@@ -13,7 +13,7 @@ BEGIN
     BEGIN
       VALUE "CompanyName", "SHTRIH-M\0"
       VALUE "FileDescription", "DAISY FX 1300 OPOS service\0"
-      VALUE "FileVersion", "1.13.0.6\0"
+      VALUE "FileVersion", "1.13.0.7\0"
       VALUE "InternalName", "DAISY FX 1300 OPOS service \0"
       VALUE "LegalCopyright", "SHTRIH-M \251 2013 \0"
       VALUE "OriginalFilename", "OposDaisy.dll\0"
